// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`portable - artifactName and request execution level 1`] = `
Object {
  "win": Array [
    Object {
      "arch": "x64",
      "file": "Test App ßWPortable.1.1.0.exe",
      "safeArtifactName": "TestApp-1.1.0.exe",
      "updateInfo": null,
    },
  ],
}
`;

exports[`portable 1`] = `
Object {
  "win": Array [
    Object {
      "arch": "x64",
      "file": "Test App ßW Setup 1.1.0.exe",
      "safeArtifactName": "TestApp-Setup-1.1.0.exe",
      "updateInfo": null,
    },
    Object {
      "arch": "x64",
      "file": "Test App ßW 1.1.0.exe",
      "safeArtifactName": "TestApp-1.1.0.exe",
      "updateInfo": null,
    },
  ],
}
`;
